examples/test/testpolicy13684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13684
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key14: value48
      key21: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value18
      podSelector:
        matchLabels:
          key10: value11
          key18: value6
